// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignupForm bails if input is empty 1`] = `
<div
  class="transition-all-xslow dmc-slide"
>
  <form
    action="https://somewheretowear.us19.list-manage.com/subscribe/post?u=641ee46704f17c07dc0e3c08e&id=4e403bb31e"
    class="mx-auto mt-16 font-haas sm:w-2/3 md:w-1/2 overflow-hidden"
    method="post"
    novalidate="novalidate"
    target="_blank"
  >
    <div
      class="w-full h-full"
    >
      <label
        class="font-semibold text-xs uppercase inline-block mb-1"
        for="email"
      >
        <span
          class="invisible absolute"
        >
          email 
        </span>
        sign up
      </label>
       
      <div
        class="mx-auto p-4 relative border-black border-solid border-2 flex center"
      >
        <input
          autocomplete="off"
          autofocus="autofocus"
          class="dmc-input font-normal s:font-lg h-full w-full font-haas pr-12 py-0 pl-0 border-0 text-black focus:outline-none appearance-none"
          id="email"
          name="EMAIL"
          placeholder="you@example.com"
          type="email"
        />
         
        <div
          aria-hidden="true"
          class="invisible absolute"
        >
          <input
            name="b_641ee46704f17c07dc0e3c08e_4e403bb31e"
            tabindex="-1"
            type="text"
          />
        </div>
         
        <button
          class="dmc-button font-normal sm:font-lg font-haas absolute text-black px-4 center border-l-2 border-solid border-black focus:outline-none hover:outline-none appearance-none"
        >
          <span>
            go
          </span>
        </button>
      </div>
    </div>
     
    <p
      class="mt-2 font-s s:font-normal"
    >
      That doesn't look like a valid email address. Try again.
    </p>
  </form>
</div>
`;

exports[`SignupForm renders 1`] = `
<div
  class="transition-all-xslow dmc-slide"
>
  <form
    action="https://somewheretowear.us19.list-manage.com/subscribe/post?u=641ee46704f17c07dc0e3c08e&id=4e403bb31e"
    class="mx-auto mt-16 font-haas sm:w-2/3 md:w-1/2 overflow-hidden"
    method="post"
    novalidate="novalidate"
    target="_blank"
  >
    <div
      class="w-full h-full"
    >
      <label
        class="font-semibold text-xs uppercase inline-block mb-1"
        for="email"
      >
        <span
          class="invisible absolute"
        >
          email 
        </span>
        sign up
      </label>
       
      <div
        class="mx-auto p-4 relative border-black border-solid border-2 flex center"
      >
        <input
          autocomplete="off"
          autofocus="autofocus"
          class="dmc-input font-normal s:font-lg h-full w-full font-haas pr-12 py-0 pl-0 border-0 text-black focus:outline-none appearance-none"
          id="email"
          name="EMAIL"
          placeholder="you@example.com"
          type="email"
        />
         
        <div
          aria-hidden="true"
          class="invisible absolute"
        >
          <input
            name="b_641ee46704f17c07dc0e3c08e_4e403bb31e"
            tabindex="-1"
            type="text"
          />
        </div>
         
        <button
          class="dmc-button font-normal sm:font-lg font-haas absolute text-black px-4 center border-l-2 border-solid border-black focus:outline-none hover:outline-none appearance-none"
        >
          <span>
            go
          </span>
        </button>
      </div>
    </div>
     
    <!---->
  </form>
</div>
`;
